[gd_scene load_steps=6 format=3 uid="uid://rbj1h53ys526"]

[ext_resource type="Script" path="res://scripts/Box_folder.gd" id="1_ut5t5"]
[ext_resource type="Script" path="res://scripts/close.gd" id="2_yr2x4"]
[ext_resource type="Script" path="res://scenes/Button2.gd" id="3_72has"]
[ext_resource type="Script" path="res://scenes/Button.gd" id="4_g7jbt"]
[ext_resource type="Script" path="res://scenes/Button3.gd" id="5_lllhw"]

[node name="Box_folder" type="CanvasLayer"]
visible = false
script = ExtResource("1_ut5t5")

[node name="Lock" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -292.0
offset_right = 184.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.180392, 0.509804, 0.266667, 1)

[node name="close" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 137.0
offset_top = 32.0
offset_right = 185.0
offset_bottom = 79.0
grow_horizontal = 2
text = "X"
script = ExtResource("2_yr2x4")

[node name="Button1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -225.0
offset_right = 60.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
script = ExtResource("3_72has")

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -59.0
offset_right = 60.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
script = ExtResource("4_g7jbt")

[node name="Button3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 104.0
offset_right = 62.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "0"
script = ExtResource("5_lllhw")

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="close" to="close" method="_on_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button1" to="Button1" method="_on_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
